encryption-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: encryption-service
spec:
    replicas: 2
    selector:
        matchLabels:
            app: encryption-service
    template:
        metadata:
            labels:
                app: encryption-service
        spec:
            containers:
                - name: encryption-service
                  image: encryption-service:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8000
                  resources:
                      limits:
                        cpu: "0.5"
                      requests:
                        cpu: "0.25"
---
apiVersion: v1
kind: Service
metadata:
    name: encryption-service
spec:
    selector:
        app: encryption-service
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
