metrics-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: metrics-server
    namespace: kube-system
spec:
    selector:
        matchLabels:
            k8s-app: metrics-server
    template:
        metadata:
            labels:
                k8s-app: metrics-server
        spec:
            serviceAccountName: metrics-server
            containers:
                - name: metrics-server
                  image: registry.k8s.io/metrics-server/metrics-server:v0.6.4
                  args:
                      - --kubelet-insecure-tls
                      - --kubelet-preferred-address-types=InternalIP
                      - --metric-resolution=15s
                      - --cert-dir=/tmp
                      - --secure-port=4443
                  ports:
                      - containerPort: 4443
                        name: https
                        protocol: TCP
                  readinessProbe:
                      httpGet:
                          path: /readyz
                          port: https
                          scheme: HTTPS
                      periodSeconds: 10
                  livenessProbe:
                      httpGet:
                          path: /livez
                          port: https
                          scheme: HTTPS
                      periodSeconds: 10
                  securityContext:
                      readOnlyRootFilesystem: true
                      runAsNonRoot: true
                      runAsUser: 1000
                  volumeMounts:
                      - mountPath: /tmp
                        name: tmp-dir
            volumes:
                - name: tmp-dir
                  emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
    name: metrics-server
    namespace: kube-system
spec:
    ports:
        - name: https
          port: 443
          protocol: TCP
          targetPort: https
    selector:
        k8s-app: metrics-server
